Day five, unified